# cooking

./: .gitignore  README.md  TODO.md  gameinfo.txt  install_mod.sh  sample.env
cfg/: autoexec.cfg
plugin/: CMakeLists.txt  Makefile
plugin/src/: Console.cpp  Console.hpp  Debug.hpp  Makefile  Memory.hpp  MinimalPlugin.cpp  MinimalPlugin.hpp  P2Harness.cpp  P2Harness.hpp  p2agent.cpp
plugin/src/SDK/: Color.hpp  Console.cpp  Console.hpp  Memory.cpp  Memory.hpp  ServerPlugin.cpp  ServerPlugin.hpp
